Update and rename test.html to index.html

--- a/test/index.html
+++ b/test/index.html
@@ -48,8 +48,8 @@
 
         // روت‌های سایت
         const routes = {
-            '/': 'home',
-            '/about': 'about'
+            '/test/': 'home',
+            '/test/about': 'about'
         };
 
         // تابع اصلی تغییر زبان و مسیر
